--- a/settings.conf
+++ b/settings.conf
@@ -2,19 +2,24 @@
 theme = foodopendata
 
 [credentials]
-contact_email = undefined
+contact_email = info@schoolofdata.ch
 
 [repositories]
-openfood-ch-nutrients=https://github.com/schoolofdata-ch/openfood-ch-nutrients.git
-food-composition-ch=https://github.com/schoolofdata-ch/food-composition-ch.git
-food-production-ch=https://github.com/schoolofdata-ch/food-production-ch.git
-food-allergens=https://github.com/schoolofdata-ch/food-allergens.git
-food-crop-production=https://github.com/schoolofdata-ch/food-crop-production.git
-food-meat-consumption=https://github.com/schoolofdata-ch/food-meat-consumption.git
-food-composition-fr=https://github.com/schoolofdata-ch/food-composition-fr.git
-area_cepages_france=https://github.com/schoolofdata-ch/area_cepages_france.git
-food-availability-ca=https://github.com/schoolofdata-ch/food-availability-ca.git
-global-hunger-index=https://github.com/schoolofdata-ch/global-hunger-index.git
-commodity-prices=https://github.com/datasets/commodity-prices.git
+food-datasets=https://github.com/foodopendata/food-datasets.git
+food-crop-production=https://github.com/foodopendata/oecd-crop-production.git
+food-meat-consumption=https://github.com/foodopendata/oecd-meat-consumption.git
+food-composition-ch=https://github.com/foodopendata/food-composition-ch.git
+food-allergens=https://github.com/foodopendata/food-allergens-ch.git
+food-prognolite-sample=https://github.com/foodopendata/prognolite-sample.git
+openfood-ch-nutrients=https://github.com/foodopendata/openfood-ch-nutrients.git
+global-hunger-index=https://github.com/foodopendata/ifpri-global-hunger-index.git
+food-production-ch=https://github.com/foodopendata/faostat-production-ch.git
+food-composition-fr=https://github.com/foodopendata/food-composition-fr.git
+food-availability-ca=https://github.com/foodopendata/food-availability-ca.git
+openwines-area-cepages-fr=https://github.com/foodopendata/openwines-area-cepages-fr
 land-matrix=https://github.com/schoolofdata-ch/land-matrix.git
-food-datasets=food-datasets=https://github.com/schoolofdata-ch/food-datasets.git
+commodity-prices=https://github.com/datasets/commodity-prices.git
+total-diet-study-food-consumption-amounts-2003=http://datahub.io/JohnSnowLabs/total-diet-study-food-consumption-amounts-2003/datapackage.json
+cnpp-food-prices-database-2003-2004=http://datahub.io/JohnSnowLabs/cnpp-food-prices-database-2003-2004/datapackage.json
+
+# cd /home/oleg/Localdev/Frictionless/datapackage-py && python build/lib/datapackage/cli.py validate /home/oleg/Localdev/opendata/FoodOpenData/food-allergens-ch/datapackage.json
