--- a/settings.conf
+++ b/settings.conf
@@ -6,7 +6,6 @@ contact_email = info@schoolofdata.ch
 
 [repositories]
 energy-data-ch=https://github.com/schoolofdata-ch/energy-data-ch.git
-pv-optimisation=https://github.com/zuzfil/PV-Optimisation
-datapackage_renewable_power_plants_europe=https://github.com/fraukewiese/datapackage_renewable_power_plants_europe
-co2-fossil-by-nation=https://github.com/datasets/co2-fossil-by-nation
+co2-fossil-by-nation=https://github.com/datasets/co2-fossil-by-nation.git
 seismic-bumps=https://datahub.io/machine-learning/seismic-bumps/datapackage.json
+pv-optimisation=https://github.com/zuzfil/PV-Optimisation.git
