--- a/settings.conf
+++ b/settings.conf
@@ -6,7 +6,8 @@ contact_email = info@schoolofdata.ch
 
 [repositories]
 energy-data-ch=https://github.com/schoolofdata-ch/energy-data-ch.git
-co2-fossil-by-nation=https://github.com/datasets/co2-fossil-by-nation.git
 electricity_tariffs=https://github.com/loleg/Electricity_tariffs.git
 powercurve-data=https://github.com/schoolofdata-ch/powercurve-data.git
 pv-optimisation=https://github.com/loleg/PV-Optimisation.git
+climate-scenarios=https://github.com/bkarolina/Climate-Scenarios-Switzerland.git
+co2-fossil-by-nation=https://github.com/datasets/co2-fossil-by-nation.git
